# CGA-Shape-grammar-parser

./: CGA-Shape-Parser.bundle  CMakeLists.txt  README.md  main.cpp  test_rules.txt
parser/: y_io_2.h
shape/: geometry.cpp  geometry.h  nonterminalShape.cpp  nonterminalShape.h  rule.cpp  rule.h  shape.cpp  shape.h  terminalShape.cpp  terminalShape.h  workflow.cpp  workflow.h
util/: basicSplitRule.cpp  basicSplitRule.h  componentSplitRule.cpp  componentSplitRule.h  createShape.cpp  createShape.h  generalProcessor.cpp  generalProcessor.h  generalRule.cpp  generalRule.h  nestedBasicSplitRule.cpp  nestedBasicSplitRule.h  repeatRule.cpp  repeatRule.h  scopeRule.cpp  scopeRule.h
